<resources>
    <string name="app_name">SQUAD</string>
    <string name="app_title">S Q U A D</string>
    <string name="app_developer">ⓒ k x x c n</string>
    <string name="system.setting">설정</string>
    <string name="system_denied_permission">"권한 허가를 거부하시면 이 서비스를 이용하실 수 없습니다.\n\n[설정] > [권한]에서 권한을 켜십시오."</string>

    <string name="signup">SIGN-UP</string>
    <string name="login">LOG-IN</string>
    <string name="contact_administrator">관리자에게 문의하세요.</string>
    <string name="input_email">이메일을 입력하세요.</string>
    <string name="input_team">팀명을 입력하세요.</string>
    <string name="input_contact">전화번호를 입력하세요.</string>
    <string name="input_pass">비밀번호를 입력하세요.</string>
    <string name="input_confirm">비밀번호를 재입력하세요.</string>
    <string name="input_all">모든 항목을 입력하세요.</string>
    <string name="input_information">회원정보를 입력하세요.</string>
    <string name="input_start_time">시작시간을 입력하세요.</string>
    <string name="input_end_time">종료시간을 입력하세요.</string>
    <string name="input_message">메시지를 입력하세요.</string>

    <string name="navi_title_match">MATCH</string>
    <string name="navi_title_list">LIST</string>
    <string name="navi_title_team">TEAM</string>
    <string name="navi_title_setting">SETTING</string>

    <string name="match_title_match">매치등록</string>
    <string name="match_title_player">용병등록</string>
    <string name="match_title_recruitment">용병모집</string>
    <string name="match_title_registration">상세정보</string>

    <string name="input_date">날짜를 입력하세요.</string>
    <string name="input_time">시간을 입력하세요.</string>
    <string name="re_input_time">시간을 다시 입력하세요.</string>
    <string name="input_money">구장비를 입력하세요.</string>
    <string name="input_place">장소를 입력하세요.</string>
    <string name="input_inquiry">기타사항을 입력하세요.</string>
    <string name="successfully_registration">등록되었습니다.</string>
    <string name="unsuccessfully_registration">등록을 실패했습니다.</string>
    <string name="successfully_remove">삭제되었습니다.</string>
    <string name="unsuccessfully_remove">삭제를 실패했습니다.</string>
    <string name="received_message">[%s]팀에서 메시지를 보냈습니다.</string>
    <string name="coming_soon">준비 중입니다.</string>
    <string name="set_auth">인증하기</string>
    <string name="transfer_auth_code">인증코드 전송</string>
    <string name="complete_auth">인증완료</string>
    <string name="failure_sms_code">인증코드 전송을 실패했습니다.</string>
    <string name="success_auth">인증을 성공했습니다.</string>
    <string name="failure_auth">인증을 실패했습니다.</string>

    <string name="quick_match">빠른 매칭</string>
    <string name="quick_button">Match</string>
    <string name="quick_no_result">경기가 없습니다.</string>
    <string name="quick_failed_search">퀵매치를 실패했습니다. 다시 시도해주세요.</string>
    <string name="quick_dialog_request">요청하기</string>
    <string name="select_date">%d-%d-%d</string>
    <string name="select_time">%d:%s</string>
    <string name="time">%s ~ %s</string>

    <string name="not_match_password">비밀번호가 일치하지 않습니다.</string>
    <string name="exceed_characters">허용 글자 수를 초과했습니다.</string>
    <string name="password_rule">비밀번호는 6자리 이상 입력하세요.</string>
    <string name="check_member_information">회원정보를 확인하세요.</string>
    <string name="duplicate_id">중복된 아이디입니다.</string>
    <string name="duplicate_team">중복된 팀명입니다.</string>
    <string name="successfully_signup">회원가입을 축하드립니다.</string>
    <string name="failure_register">회원가입을 실패했습니다.</string>
    <string name="exist_account">이미 존재하는 계정입니다.</string>
    <string name="exist_team">이미 존재하는 팀입니다.</string>
    <string name="badly_formatted">이메일 형식이 올바르지 않습니다.</string>
    <string name="want_to_quit">스쿼드를 종료하시겠습니까?</string>
    <string name="want_to_remove">등록된 정보를 삭제하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="registration">등록하기</string>

    <string name="setting">설정</string>
    <string name="setting_account">계정</string>
    <string name="setting_profile">프로필 편집</string>
    <string name="setting_observe">알림</string>
    <string name="setting_notice_squad">스쿼드 알림</string>
    <string name="setting_notice_observe">공지 알림</string>
    <string name="setting_notice_event">이벤트 정보 수신</string>
    <string name="setting_service">서비스 정보</string>
    <string name="setting_notice">공지사항</string>
    <string name="setting_app_information">스쿼드 앱 정보</string>
    <string name="setting_latest_version">최신 버전 사용 중</string>
    <string name="setting_drop_out">탈퇴하기</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_want_logout">로그아웃 하시겠습니까?</string>
    <string name="setting_success_logout">로그아웃되었습니다.</string>
    <string name="setting_failure_logout">로그아웃을 실패했습니다.</string>
    <string name="setting_update">업데이트</string>

    <string name="list_title">현황</string>
    <string name="list_schedule">%s %s</string>
    <string name="list_request">요청</string>
    <string name="list_complete">완료</string>
    <string name="list_checking">확인 중</string>
    <string name="list_successfully_request_match">경기를 요청했습니다.</string>
    <string name="list_successfully_request_recruitment">용병을 신청했습니다.</string>
    <string name="list_successfully_request_player">용병을 요청했습니다.</string>
    <string name="list_unsuccessfully_request">요청을 실패했습니다.</string>
    <string name="list_request_match">[%s]팀에서 경기를 요청했습니다.</string>
    <string name="list_request_recruitment">[%s]팀에서 용병을 신청했습니다.</string>
    <string name="list_request_player">[%s]팀에서 용병을 요청했습니다.</string>
    <string name="list_region">지역</string>
    <string name="list_date">날짜</string>
    <string name="list_information">%s / %s</string>
    <string name="list_region_place">%s %s</string>

    <string name="navigation_news">새 소식</string>

    <string name="team_notification_match">NEW</string>
    <string name="team_no_notification">알림이력이 없습니다.</string>
    <string name="team_scheduled_match">매칭이 완료된 경기입니다.</string>
    <string name="team_cancel_match">취소된 경기입니다.</string>
    <string name="team_deadline">"일정이 지난 경기입니다."</string>
    <string name="team_agree">수락하기</string>
    <string name="team_versus">V S</string>
    <string name="team_home">HOME</string>
    <string name="team_away">AWAY</string>
    <string name="team_divider">/</string>
    <string name="team_date">%s-%s-%s</string>
    <string name="team_want_remove">알림이력을 모두 삭제하시겠습니까?</string>
    <string name="team_want_call">통화 하시겠습니까?</string>
    <string name="team_information_call">tel:%s</string>
    <string name="team_failure_information">"상대팀 정보를 가져오지 못했습니다."</string>
    <string name="team_received_message">메시지가 도착했습니다.</string>
    <string name="team_recruitment_home">[%s]팀이 용병으로 참가합니다.</string>
    <string name="team_recruitment_away">[%s]팀 경기에 참가합니다.</string>
    <string name="team_player_home">[%s]팀 경기에 참가합니다.</string>
    <string name="team_player_away">[%s]팀이 용병으로 참가합니다.</string>

    <string name="notification_schedule">경기일정</string>
    <string name="notification_no_introduce">클럽 소개글이 없습니다.</string>
    <string name="notification_agree">[%s]팀에서 경기를 수락했습니다.</string>
    <string name="notification_player_agree">[%s]팀에서 요청을 수락했습니다.</string>
    <string name="notification_game_agree">[%s]팀에서 신청을 수락했습니다.</string>
    <string name="notification_unsuccessfully_agree">경기 수락을 실패했습니다.</string>
    <string name="notification_complete_match">매칭완료</string>
    <string name="notification_call">통화</string>
    <string name="notification_message">TALK</string>

    <string name="chatting_failure_send">메시지 전송을 실패했습니다.</string>

    <string name="total">전체</string>
    <string name="seoul">서울</string>
    <string name="busan">부산</string>
    <string name="gwangju">광주</string>
    <string name="daegu">대구</string>
    <string name="jeju">제주도</string>
    <string name="incheon">인천</string>
    <string name="daejeon">대전</string>
    <string name="ulsan">울산</string>

    <string name="player_request">요청하기</string>
    <string name="player_information">/%s#%s#%s#%s</string>
    <string name="player_title">매치정보</string>

    <string name="version_clause">이용약관</string>
    <string name="version_policy">개인정보처리방침</string>
    <string name="version_license">오픈소스 라이선스</string>
    <string name="version_current">현재버전 : %s</string>
    <string name="version_latest">최신버전 : %s</string>
    <string name="version_failure_latest">버전정보를 가져올 수 없습니다.</string>

    <string name="profile_save">저장하기</string>
    <string name="profile_introduce">클럽 소개글을 입력하세요.</string>

    <!-- LOG -->
    <string name="log_information">%s, %s, %s, %s, %s, %s, %s, %s, %s</string>
</resources>
